# VastseaLauncher

./: .eslintrc.cjs  .gitignore  README.md  babel.config.js  commitlint.config.js  jest.config.js  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cache/: config.json
src-tauri/src/: command.rs  main.rs  setup.rs
src-tauri/src/log/: mod.rs
src-tauri/src/login/: credential.rs  mod.rs  window.rs
src-tauri/src/user/: microsoft.rs  mod.rs  setting.rs
src-tauri/src/utils/: error.rs  fs.rs  mod.rs  os_check.rs
src/__tests__/: button.spec.tsx  java-select.spec.tsx  memory-select.spec.tsx  resolution.spec.tsx
src/api/: auth.ts  index.ts  log.ts  service.ts  skin.ts
src/assets/: main.css
src/assets/css/: main.css  transition.css
src/components/: about.tsx  account.tsx  footer.tsx  header.tsx  java-select.tsx  links.tsx  loading.tsx  memory-select.tsx  nav-bar.tsx  resolution.tsx
src/components/common/: button-group.tsx  button.tsx  dynamic-forms.tsx  skinview.tsx  toast.tsx
src/components/common/list/: list-item.tsx  list.tsx
src/components/common/svg/: add.tsx  close.tsx  expand.tsx  index.tsx  info.tsx  microsoft.tsx  news-paper.tsx  play.tsx  setting.tsx  warning.tsx
src/interface/: credentials.d.ts  profile.d.ts  setting.d.ts
src/pages/: home.tsx  login.tsx  setting.tsx
src/pages/news/: new-list.tsx  new.tsx  news.tsx
