[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-start-dragging", "dialog-open", "window-minimize", "window-close", "http-request", "window-create", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.2"
lazy_static = "1.4.0"
hyper-tls = "0.5.0"
hyper = "0.14.27"
reqwest = { version = "0.11.18", features = ["json"] }
simple-log = "1.6.0"
chrono = "0.4.26"
sysinfo = "0.29.6"
regex = "1.9.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
